<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notre Parc Vert</string>
    <string name="title">Notre Parc Vert</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_creation">Créer un nouveau problème</string>
    <string name="title_activity_accueil">Accueil</string>
    <string name="title_activity_probleme">Probleme</string>

    <color name="white">#ffffff</color>
    <color name="black">#000000</color>
    <color name="red">#eaadea</color>
    <color name="blue">#adeaea</color>

    <string-array name="types">
        <item>Arbre à tailler</item>
        <item>Arbre à abattre</item>
        <item>Détritus</item>
        <item>Haie à tailler</item>
        <item>Mauvaise herbe</item>
        <item>Autre</item>
    </string-array>

    <string name="btn_cre">Créer un nouveau problème</string>
    <string name="btn_val">Créer</string>
    <string name="btn_sup">Supprimer</string>
    <string name="btn_map">Affichier sur unr carte</string>
    <string name="lon">Longitude : </string>
    <string name="lat">Latitude : </string>
    <string name="des">Description : </string>
    <string name="loca_exa">Localisation exacte : </string>
    <string name="loca">Localisation : </string>
    <string name="type">Type : </string>
    <string name="title_activity_map">MapActivity</string>

</resources>
